@@ -1,5 +1,6 @@
 require 'rubygems'
 require 'bundler'
+require 'rails'
 
 Bundler.require :default, :development
 
